updated readme to reflect my purpose behind this activity. fixed styling for background and buttons. Added navigation to next question AND a delay on navigation to enable user to see CORRECT notification

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: aliceblue;
+}
+
 h1 {
   margin-top: 15%;
   text-align: center;
@@ -9,6 +13,11 @@ h1 {
 
 button {
   width: 50%;
+}
+#correctNotif {
+  text-align: center;
+  color: green;
+  font-size: 24px;
 }
 
 #description {
@@ -26,13 +35,10 @@ button {
   padding-bottom: 1%;
 }
 
-#startBtn {
- margin: 0 auto;
- width: 100%;
+.Btn {
+  margin: 0 auto;
 }
 
-#qBtn {
-margin: 0 auto;
-width: 25%;
+a {
+  width: 50%;
 }
-
